# voxquipeut

./: CMakeLists.txt  README.md  shell.nix
src/: field.cpp  input.cpp  main.cpp  marching_cubes.cpp  object.cpp  raycast.cpp  render.cpp  shader.cpp  vox.h
src/shaders/: frag.glsl  vertex.glsl
